objects/Objectif__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Nom__c</fullName>
        <label>Nom</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projet__c</fullName>
        <label>Projet</label>
        <referenceTo>Projet__c</referenceTo>
        <relationshipLabel>Objectifs</relationshipLabel>
        <relationshipName>Objectifs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Objectif</label>
    <nameField>
        <displayFormat>OB-{0000}</displayFormat>
        <label>Référence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objectifs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>